# cppyy

./: .gitignore  BUILD.bazel  MODULE.bazel  README.rst  requirements.txt  requirements_bazel.txt
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml  bazel.yml  ci.yml  emscripten.yml
bazel/: BUILD.bazel  MODULE.bazel  defs.bzl  llvm.bzl  rules.bzl  sitecustomize.py
etc/: clang18-valgrind.supp  clang19-valgrind.supp  clang20-valgrind.supp  clang20-valgrind_arm.supp  clang21-valgrind.supp  clang21-valgrind_arm.supp  cling18-valgrind.supp  valgrind-cppyy-cling.supp
patches/llvm/: clang16-D148435-WeakRefs.patch
python/cppyy/: __init__.py  _cpython_cppyy.py  _pypy_cppyy.py  _typemap.py  numba_ext.py
test/: advancedcpp.h  cpp11features.h  datatypes.cxx  datatypes.h  stltypes.cxx  stltypes.h  support.py  test_aclassloader.py  test_advancedcpp.py  test_api.py  test_basic_api.py  test_boost.py  test_concurrent.py  test_conversions.py  test_cpp11features.py  test_crossinheritance.py  test_datatypes.py  test_doc_features.py  test_eigen.py  test_fragile.py  test_leakcheck.py  test_lowlevel.py  test_main.py  test_numba.py  test_operators.py  test_overloads.py  test_pythonify.py  test_pythonization.py  test_regression.py  test_stltypes.py  test_streams.py  test_templates.py  test_typehints.py
