module(
    name = "cppyy",
    version = "0.1.0",
)

bazel_dep(name = "cppyy_bazel", version = "0.1.0")
local_path_override(
    module_name = "cppyy_bazel",
    path = "bazel",
)

bazel_dep(name = "cppinterop", version = "0.1.0")
local_path_override(
    module_name = "cppinterop",
    path = "../CppInterOp",
)

bazel_dep(name = "cppyy_backend", version = "0.1.0")
local_path_override(
    module_name = "cppyy_backend",
    path = "../cppyy-backend",
)

bazel_dep(name = "cpycppyy", version = "0.1.0")
local_path_override(
    module_name = "cpycppyy",
    path = "../CPyCppyy",
)

bazel_dep(name = "rules_python", version = "1.5.1")

# @llvm comes from the local LLVM/Clang tree selected by LLVM_DIR.
llvm = use_extension("@cppyy_bazel//:llvm.bzl", "llvm")
use_repo(llvm, llvm = "cppjit_llvm")

# Opt in to the centralized clang toolchain from cppyy_bazel (standalone build).
register_toolchains("@llvm//:cc_toolchain")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "cppyy_test_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements_bazel.txt",
)
use_repo(pip, "cppyy_test_deps")
