exports_files([
    "llvm.bzl",
    "defs.bzl",
    "rules.bzl",
])

# Auto-imported shim that fixes the hermetic interpreter's stale sysconfig
# INCLUDEPY; py_tests depend on it. imports=["."] puts this dir on sys.path so
# Python picks up sitecustomize at startup.
py_library(
    name = "sitecustomize",
    srcs = ["sitecustomize.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
)
